Added heart animation and text animation

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script>
         const projects = [
             { name: "Heart Trail Animation", icon: "fas fa-code", link: "project1/index.html" },
-            { name: "Project 2", icon: "fas fa-paint-brush", link: "project2/index.html" },
+            { name: "Auto Text Effect Animation", icon: "fas fa-paint-brush", link: "project2/index.html" },
             { name: "Project 3", icon: "fas fa-chart-bar", link: "project3/index.html" },
             { name: "Project 4", icon: "fas fa-camera", link: "project4/index.html" },
         ];
