--- a/project2/index.html
+++ b/project2/index.html
@@ -10,13 +10,15 @@
     <!-- Sikrer den nyeste gjengivelsesmodusen for Internet Explorer -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Responsiv innstilling for visning på mobile enheter -->
-    <title>Heart Trailing Animation</title>
+    <title>Auto Text Effect Animation</title>
     <!-- Dokumentets tittel, vist i nettleserens faner -->
     <link rel="stylesheet" href="styles.css" />
     <!-- Kobler til en ekstern CSS-fil for styling -->
   </head>
   <body>
-    <!-- Kroppselementet til HTML-dokumentet -->
+    <!-- Container for tekstanimasjonen -->
+    <div class="container">
+    </div>
     <script src="index.js"></script>
     <!-- Kobler til en ekstern JavaScript-fil -->
   </body>
