Finished some small project: Random Image Generator Button Ripple Effect Mini Calender Auto Text Effect Animation

--- a/project2/index.html
+++ b/project2/index.html
@@ -17,8 +17,7 @@
   </head>
   <body>
     <!-- Container for tekstanimasjonen -->
-    <div class="container">
-    </div>
+    <div class="container"></div>
     <script src="index.js"></script>
     <!-- Kobler til en ekstern JavaScript-fil -->
   </body>
