--- a/project4/index.html
+++ b/project4/index.html
@@ -5,23 +5,15 @@
     <!-- Spesifiserer tegnkoding for dokumentet (Unicode) -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Responsiv innstilling for visning på mobile enheter -->
-    <title>Mini Calender</title>
+    <title>Ripple Effect Button</title>
     <!-- Dokumentets tittel, vist i nettleserens faner -->
     <link rel="stylesheet" href="styles.css" />
     <!-- Kobler til en ekstern CSS-fil for styling -->
   </head>
   <body>
-    <!-- Kalenderbeholderen som inneholder datoinformasjonen -->
-    <div class="calender-container">
-      <p class="month-name" id="month-name">Aug</p>
-      <!-- Månedsnavn -->
-      <p class="day-name" id="day-name">Monday</p>
-      <!-- Ukedagens navn -->
-      <p class="day-number" id="day-number">20</p>
-      <!-- Dagens nummer -->
-      <p class="year" id="year">1952</p>
-      <!-- Årstallet -->
-    </div>
+    <!-- En lenke som ser ut som en knapp -->
+    <a href="#" class="btn"><span>Button</span></a>
+    <!-- Inneholder knappen som får stil gjennom CSS -->
     <script src="index.js"></script>
     <!-- Kobler til en ekstern JavaScript-fil -->
   </body>
