--- a/index.html
+++ b/index.html
@@ -6,23 +6,7 @@
     <title>My Projects</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        body {
-            background-color: #f8f9fa;
-            padding-top: 3rem;
-        }
-        .project-card {
-            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-        }
-        .project-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
-        }
-        .project-icon {
-            font-size: 2rem;
-            margin-bottom: 1rem;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -30,32 +14,9 @@
         <div class="row" id="projectList">
         </div>
     </div>
+    <script src="index.js"></script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        const projects = [
-            { name: "Heart Trail Animation", icon: "fas fa-code", link: "project1/index.html" },
-            { name: "Auto Text Effect Animation", icon: "fas fa-paint-brush", link: "project2/index.html" },
-            { name: "Project 3", icon: "fas fa-chart-bar", link: "project3/index.html" },
-            { name: "Project 4", icon: "fas fa-camera", link: "project4/index.html" },
-        ];
-
-        const projectList = document.getElementById('projectList');
-
-        projects.forEach(project => {
-            const card = document.createElement('div');
-            card.className = 'col-md-6 col-lg-4 mb-4';
-            card.innerHTML = `
-                <div class="card project-card h-100">
-                    <div class="card-body text-center">
-                        <i class="${project.icon} project-icon"></i>
-                        <h5 class="card-title">${project.name}</h5>
-                        <a href="${project.link}" class="btn btn-primary">View Project</a>
-                    </div>
-                </div>
-            `;
-            projectList.appendChild(card);
-        });
-    </script>
 </body>
 </html>
