Fixed back button for all project, restyled the first index with tailwind and more responsive, finished dad joke generator, added comments to normal index, redid the js for the first index.js so it fetches from a json so more dynamic

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -16,6 +16,8 @@
     <!-- Links to an external CSS file for styling -->
   </head>
   <body>
+    <a class="back" href="../index.html"><p>back</p></a>
+
     <script src="index.js"></script>
   </body>
 </html>
