--- a/project02/index.html
+++ b/project02/index.html
@@ -16,6 +16,7 @@
     <!-- Kobler til en ekstern CSS-fil for styling -->
   </head>
   <body>
+    <a class="back" href="../index.html"><p>back</p></a>
     <!-- Container for tekstanimasjonen -->
     <div class="container"></div>
     <script src="index.js"></script>
