--- a/project03/index.html
+++ b/project03/index.html
@@ -11,6 +11,7 @@
     <!-- Kobler til en ekstern CSS-fil for styling -->
   </head>
   <body>
+    <a class="back" href="../index.html"><p>back</p></a>
     <!-- Kalenderbeholderen som inneholder datoinformasjonen -->
     <div class="calender-container">
       <p class="month-name" id="month-name">Aug</p>
