--- a/project04/index.html
+++ b/project04/index.html
@@ -11,6 +11,7 @@
     <!-- Kobler til en ekstern CSS-fil for styling -->
   </head>
   <body>
+    <a class="back" href="../index.html"><p>back</p></a>
     <!-- En lenke som ser ut som en knapp -->
     <a href="#" class="btn"><span>Button</span></a>
     <!-- Inneholder knappen som får stil gjennom CSS -->
