--- a/project05/index.html
+++ b/project05/index.html
@@ -8,6 +8,7 @@
     <!-- Kobler til stilark -->
   </head>
   <body>
+    <a class="back" href="../index.html"><p>back</p></a>
     <div class="image-container">
       <!-- Container for bilder -->
       <img src="https://picsum.photos/300?random=1" alt="Random Picture 1" />
