--- a/project09/index.html
+++ b/project09/index.html
@@ -8,6 +8,7 @@
     <!-- Kobler til CSS-fil -->
   </head>
   <body>
+    <a class="back" href="../index.html"><p>back</p></a>
     <div class="weather-card">
       <!-- Kortet som inneholder søkefeltet og værinfo -->
 
