--- a/project10/index.html
+++ b/project10/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dark Mode</title>
+    <title>Todo List</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <a class="back" href="../index.html"><p>back</p></a>
+
+
+
     <script src="index.js"></script>
 </body>
 </html>
