--- a/boilerplate/project6/index.html
+++ b/boilerplate/project6/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <a class="back" href="../index.html"><p>back</p></a>
     
     <script src="index.js"></script>
 </body>
