--- a/project01/index.html
+++ b/project01/index.html
@@ -16,6 +16,7 @@
     <!-- Kobler til en ekstern CSS-fil for styling -->
   </head>
   <body>
+    <a class="back" href="../index.html"><p>back</p></a>
     <!-- Kroppselementet til HTML-dokumentet -->
     <script src="index.js"></script>
     <!-- Kobler til en ekstern JavaScript-fil -->
