--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Beholder for alt innhold, sentrert med margin auto -->
     <div class="container mx-auto">
       <!-- Tittel for prosjektlisten -->
-      <h1 class="text-center text-4xl font-bold mb-10">My Projects</h1>
+      <h1 class="text-center text-4xl font-bold mb-10">Emp Projects</h1>
       <!-- Grid-oppsett for prosjektkort, responsivt for forskjellige skjermstørrelser -->
       <div
         class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"
