--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Projects</title>
+    <title>Bjørn-Magne Javascript Projects</title>
     <!-- TailwindCSS for stil -->
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
@@ -19,7 +19,7 @@
     <!-- Beholder for alt innhold, sentrert med margin auto -->
     <div class="container mx-auto">
       <!-- Tittel for prosjektlisten -->
-      <h1 class="text-center text-4xl font-bold mb-10">Emp Projects</h1>
+      <h1 class="text-center text-4xl font-bold mb-10">Bjørn-Magne Javascript Projects</h1>
       <!-- Grid-oppsett for prosjektkort, responsivt for forskjellige skjermstørrelser -->
       <div
         class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"
