Refactor color palette generator: Updated HTML structure for better accessibility, added JavaScript functionality for palette generation and color copying, and enhanced CSS styles for improved layout and responsiveness.

--- a/colorpalettegenerator/index.html
+++ b/colorpalettegenerator/index.html
@@ -14,53 +14,73 @@
     <a class="back" href="../index.html"><p>Back</p></a>
     <div class="container">
       <h1>Color Palette Generator</h1>
-      <button id="generatePalette">
+      <button id="generate-button" class="generate-button">
         <i title="Generate Palette" class="fas fa-sync-alt"></i> Generate
         Palette
       </button>
-      <div class="palette-container">
+      <div class="palette-container" id="paletteContainer">
         <!-- Color Box 1 -->
-        <div class="color-box">
-          <div class="color" style="background-color: #f94144"></div>
+        <div class="color-box" id="colorBox1">
+          <div
+            class="color"
+            id="color1"
+            style="background-color: #f94144"
+          ></div>
           <div class="color-info">
-            <span class="hex">#f94144</span>
-            <i class="fas fa-copy" title="Copy to clipboard"></i>
+            <span class="hex" id="hex1">#f94144</span>
+            <i class="fas fa-copy" id="copyIcon1" title="Copy to clipboard"></i>
           </div>
         </div>
 
         <!-- Color Box 2 -->
-        <div class="color-box">
-          <div class="color" style="background-color: #f3722c"></div>
+        <div class="color-box" id="colorBox2">
+          <div
+            class="color"
+            id="color2"
+            style="background-color: #f3722c"
+          ></div>
           <div class="color-info">
-            <span class="hex">#f3722c</span>
-            <i class="fas fa-copy" title="Copy to clipboard"></i>
+            <span class="hex" id="hex2">#f3722c</span>
+            <i class="fas fa-copy" id="copyIcon2" title="Copy to clipboard"></i>
           </div>
         </div>
 
         <!-- Color Box 3 -->
-        <div class="color-box">
-          <div class="color" style="background-color: #f8961e"></div>
+        <div class="color-box" id="colorBox3">
+          <div
+            class="color"
+            id="color3"
+            style="background-color: #f8961e"
+          ></div>
           <div class="color-info">
-            <span class="hex">#f8961e</span>
-            <i class="fas fa-copy" title="Copy to clipboard"></i>
+            <span class="hex" id="hex3">#f8961e</span>
+            <i class="fas fa-copy" id="copyIcon3" title="Copy to clipboard"></i>
           </div>
         </div>
 
         <!-- Color Box 4 -->
-        <div class="color-box">
-          <div class="color" style="background-color: #f9c74f"></div>
+        <div class="color-box" id="colorBox4">
+          <div
+            class="color"
+            id="color4"
+            style="background-color: #f9c74f"
+          ></div>
           <div class="color-info">
-            <span class="hex">#f9c74f</span>
-            <i class="fas fa-copy" title="Copy to clipboard"></i>
+            <span class="hex" id="hex4">#f9c74f</span>
+            <i class="fas fa-copy" id="copyIcon4" title="Copy to clipboard"></i>
           </div>
         </div>
 
         <!-- Color Box 5 -->
-        <div class="color-box">
-          <div class="color" style="background-color: #90be6d"></div>
+        <div class="color-box" id="colorBox5">
+          <div
+            class="color"
+            id="color5"
+            style="background-color: #90be6d"
+          ></div>
           <div class="color-info">
-            <span class="hex">#90be6d</span>
-            <i class="fas fa-copy" title="Copy to clipboard"></i>
+            <span class="hex" id="hex5">#90be6d</span>
+            <i class="fas fa-copy" id="copyIcon5" title="Copy to clipboard"></i>
           </div>
         </div>
       </div>
