Put favicon on all

--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -11,6 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Responsive viewport settings for mobile devices -->
     <title>Boilerplate</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/logo/favicon-16x16.png">
     <!-- The title of the document, displayed in browser tabs -->
     <link rel="stylesheet" href="styles.css" />
     <!-- Links to an external CSS file for styling -->
