--- a/todolist/index.html
+++ b/todolist/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/logo/favicon-16x16.png">
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -16,7 +19,7 @@
       <div class="todo-app" id="todo-app">
         <!-- Overskrift -->
         <h2 class="todo-title">
-          Todo List <img src="assets/icon.png" alt="List icon" />
+          Todo List <img src="../assets/logo/favicon-32x32.png" alt="List icon" />
         </h2>
 
         <!-- Rad med input og knapp -->
