--- a/autotexteffect/index.html
+++ b/autotexteffect/index.html
@@ -11,6 +11,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Responsiv innstilling for visning på mobile enheter -->
     <title>Auto Text Effect Animation</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/logo/favicon-16x16.png">
     <!-- Dokumentets tittel, vist i nettleserens faner -->
     <link rel="stylesheet" href="styles.css" />
     <!-- Kobler til en ekstern CSS-fil for styling -->
