--- a/feedbackui/index.html
+++ b/feedbackui/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Responsiv design for mobil -->
     <title>Feedback UI</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/logo/favicon-16x16.png">
     <!-- Tittel på siden -->
     <link rel="stylesheet" href="styles.css" />
     <!-- Kobler til CSS-stilark -->
