--- a/freecodecamp/rando/Rothko.html
+++ b/freecodecamp/rando/Rothko.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Rothko Painting</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="../../assets/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/logo/favicon-16x16.png">
     <link href="./Rothko.css" rel="stylesheet">
   </head>
   <body>
