--- a/freecodecamp/rando/catphoto.html
+++ b/freecodecamp/rando/catphoto.html
@@ -3,6 +3,9 @@
 <html lang="en">
   <head>
     <title>CatPhotoApp</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="../../assets/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/logo/favicon-16x16.png">
     <meta charset="utf-8" />
   </head>
   <body>
