--- a/freecodecamp/rando/csstricks.html
+++ b/freecodecamp/rando/csstricks.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marker</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="../../assets/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/logo/favicon-16x16.png">
     <link rel="stylesheet" href="csstricks.css" />
   </head>
   <body>
