--- a/freecodecamp/rando/label.html
+++ b/freecodecamp/rando/label.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Nutrition Label</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="../../assets/logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/logo/favicon-16x16.png">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
   <link href="./label.css" rel="stylesheet">
 </head>
