--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>JavaScript Projects Collection | Bjørn-Magne</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="assets/logo/favicon-32x32.png" />
     
     <!-- TailwindCSS -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
