--- a/resume/about.html
+++ b/resume/about.html
@@ -13,10 +13,10 @@
     />
     <meta name="author" content="Bjørn-Magne" />
     <title>About Me | CS50 Portfolio</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="logo/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="logo/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="logo/favicon-16x16.png">
-    <link rel="manifest" href="logo/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/logo/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../assets/logo/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="../assets/logo/favicon-16x16.png">
+<link rel="manifest" href="../assets/logo/site.webmanifest">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
