--- a/resume/index.html
+++ b/resume/index.html
@@ -34,6 +34,14 @@
     <!-- Hero Section -->
     <header class="hero-section text-white text-center">
       <div class="container">
+        <div class="mb-4">
+          <img 
+            src="logo/eyJ0IjoiMSIsImsiOiJBMWQifQ.aixw6NNViq2aue8O5eQrn4_EefayE5gkO96CnhTML9jL8lnk2uuMl_0j6bM529VSaS1jvrBPiMOAlMd8CSmyrYZX05Vg_CldLfcTuWamEU_etEe-oi0Z6mA7gW_YUkm7.g3HN63S89t_FdH4GbSbIDg.jpg" 
+            alt="Profile Picture" 
+            class="rounded-circle img-thumbnail profile-image"
+            style="width: 150px; height: 150px; object-fit: cover; margin-bottom: 20px;"
+          />
+        </div>
         <h1 class="display-4 fw-bold mb-4 animate-up">
           Welcome to My CS50 Journey
         </h1>
