--- a/resume/about.html
+++ b/resume/about.html
@@ -50,6 +50,14 @@
             <div class="col-md-6">
               <div class="card h-100">
                 <div class="card-body">
+                  <div class="text-center mb-4">
+                    <img 
+                      src="logo/eyJ0IjoiMSIsImsiOiJBMWQifQ.0CCU7cFFqK2TvKB2a7f8uUasMuhlYDPgYIdUZAyDxMQayVVAQ9Wqe5myhTENgvnhLRoOwNBjk7G9stuHSpDExSzI6fgRHnHkcmH0LDBaZrlg5D0iz227omdXXGxfivl4.Iixx1UBiB7nU8tjixjXI2w.jpg" 
+                      alt="Profile Picture" 
+                      class="rounded-circle img-thumbnail profile-image"
+                      style="width: 150px; height: 150px; object-fit: cover;"
+                    />
+                  </div>
                   <div class="d-flex align-items-center mb-4">
                     <i
                       class="bi bi-person-fill text-primary me-3 display-4"
