--- a/resume/resume.html
+++ b/resume/resume.html
@@ -13,10 +13,24 @@
     />
     <meta name="author" content="Bjørn-Magne" />
     <title>Resume | CS50 Portfolio</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/logo/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../assets/logo/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../assets/logo/favicon-16x16.png">
-<link rel="manifest" href="../assets/logo/site.webmanifest">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../assets/logo/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../assets/logo/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../assets/logo/favicon-16x16.png"
+    />
+    <link rel="manifest" href="../assets/logo/site.webmanifest" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -51,22 +65,22 @@
               <div class="card profile-card">
                 <div class="card-body">
                   <img
-                    src="logo/logo.png"
-                    alt="My Logo"
-                    class="mb-4"
-                    style="width: 150px; height: auto;"
+                    src="logo/eyJ0IjoiMSIsImsiOiJBMWQifQ.S8meniKQA2F4t4JFULFdq5sz_fms-ov4xfDQHAqpvpvjK0S6YFJx9xjWZ-dNSDw-0bWH8BJz0Y4dxElQxYZ7TGrfTDcgjjSt6HlZ2vAQqRnWj4_xLiG9KDxrOfTMOzzm.XAy464KuT99MPGm9FoiU2A.jpg"
+                    alt="My Picture"
+                    class="mb-4 profile-image"
+                    style="width: 150px; height: 150px; object-fit: cover;"
                   />
                   <h3>Bjørn-Magne Kristensen</h3>
                   <p class="text-muted">Aspiring Software Developer</p>
                   <div class="social-links mt-3">
                     <a
-                      href="https://github.com"
+                      href="https://github.com/empchief"
                       class="btn btn-outline-primary btn-social mx-1"
                     >
                       <i class="bi bi-github"></i>
                     </a>
                     <a
-                      href="https://linkedin.com"
+                      href="https://www.linkedin.com/in/bj%C3%B8rn-magne-kristensen-884b2a225/"
                       class="btn btn-outline-primary btn-social mx-1"
                     >
                       <i class="bi bi-linkedin"></i>
